--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "push-notification",
+    "name": "Push Notification",
     "slug": "push-notification",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -13,17 +13,32 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.vishal-gajera.pushnotification",
+      "infoPlist": {
+        "NSUserNotificationUsageDescription": "This app uses notifications to keep you updated."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.vishal_gajera.pushnotification",
+      "googleServicesFile": "./google-services.json",
+      "permissions": [
+        "NOTIFICATIONS"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "800b8df3-b3c1-4975-98cf-87a671b1859c"
+      }
+    },
+    "owner": "vishal_gajera"
   }
 }
