--- a/package.json
+++ b/package.json
@@ -4,19 +4,32 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "android-start": "expo start --android",
+    "ios-start": "expo start --ios",
+    "android-release": "expo run:android --variant release",
+    "web": "expo start --web",
+    "lint": "expo lint",
+
+    "configure":"eas build:configure",
+    "dev":"eas build --profile development",
+    "prod": "eas build"
   },
   "dependencies": {
     "expo": "~53.0.17",
+    "expo-clipboard": "~7.1.5",
+    "expo-device": "~7.1.4",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "eas-cli": "^16.15.0",
     "typescript": "~5.8.3"
   },
   "private": true
