Remove local eas cli

--- a/package.json
+++ b/package.json
@@ -16,22 +16,21 @@
     "prod": "eas build"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "expo": "~53.0.17",
     "expo-clipboard": "~7.1.5",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5",
-    "expo-dev-client": "~5.2.4",
     "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native": "0.79.5",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "eas-cli": "^16.15.0",
     "typescript": "~5.8.3"
   },
   "private": true
